src/tests/test-src/errors/E25-redeclare-intr-fn.syntran
// E25: redeclare-intr-fn
// A user function's name collides with a built-in (intrinsic) function

fn min(): i32
{
	return 1;
}
